src/test/ui/privacy/private-in-public.stderr
error[E0091]: type parameter `T` is unused
  --> $DIR/private-in-public.rs:140:27
   |
LL |     type PrivAliasGeneric<T = Priv> = T;
   |                           ^ unused type parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0091`.
